# python-tanker

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260222_0001_initial_auth_and_settings.py
app/: main.py
app/api/routes/: __init__.py  admin.py  auth.py
app/core/: auth.py  config.py
app/db/: base.py
app/models/: role.py  site_settings.py  user.py  user_role.py
app/schemas/: __init__.py  admin.py  auth.py
app/scripts/: seed_base.py
deploy/: DEPLOYMENT.md
deploy/linux/: deploy_release.sh  install_server.sh  nginx.tanker.conf  tanker.service
deploy/windows/: configure_iis.ps1  install_service.ps1  run_tanker.ps1  uninstall_service.ps1  web.config
docs/: python-rewrite-blueprint.md
tanker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
