[project]
name = "tanker"
version = "0.1.0"
description = "Tanker rewrite scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.0.1"
]

[project.scripts]
tanker-seed-base = "app.scripts.seed_base:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.alembic]
script_location = "alembic"
